tests/errors/erro_return_void.lua
function void nada()
    return 10; -- Erro: retornando valor em função void
end

function void main()
    nada();
end
